--- a/nn.css
+++ b/nn.css
@@ -3,17 +3,24 @@ html {
     --element-border: 2;
 }
 
-.neural-network {
+body {
+    margin: 0;
+}
+
+.interface, .neural-network {
     text-align: center;
     line-height: 100%;
 }
 
-.layers, .column {
+.layers,
+.column {
     display: inline-block;
     vertical-align: middle;
 }
 
-.perceptron, .control {
+.perceptron,
+.control,
+.information {
     margin: calc(var(--element-size) * 1px);
     border: solid calc(var(--element-border) * 1px) black;
     border-radius: calc(var(--element-size) * 1px);
@@ -24,23 +31,49 @@ html {
     background-color: white;
 }
 
-.control {
+.control, .information {
     border-color: gray;
     color: gray;
+}
+
+.information {
+    margin-bottom: 0;
+    display: inline-block;
+    width: calc(var(--element-size) * 2px);
 }
 
 .perceptron:hover {
     cursor: help;
 }
 
-.control:hover, .input .perceptron:hover {
+.control:hover,
+.information:hover,
+.input .perceptron:hover,
+.output .perceptron:hover {
     cursor: pointer;
     border-color: black;
     color: black;
 }
 
-.remove, .add {
+.control.edit {
+    position: absolute;
+    top: calc((var(--element-size) * 2 + var(--element-border)) * 1px);
+}
+
+.control.train {
+    position: relative;
+    width: calc(var(--element-size) * 2px);
+    top: calc(var(--element-size) * 1px);
+    margin: calc(var(--element-size) * 1px) calc(var(--element-size) / 2 * 1px);
+}
+
+.remove,
+.add {
     border-style: dashed;
+}
+
+.control.layer.add {
+    top: calc(var(--element-size) * -1px);
 }
 
 .line {
