--- a/nn.css
+++ b/nn.css
@@ -7,7 +7,8 @@ body {
     margin: 0;
 }
 
-.interface, .neural-network {
+.interface,
+.neural-network {
     text-align: center;
     line-height: 100%;
 }
@@ -18,9 +19,9 @@ body {
     vertical-align: middle;
 }
 
+.information,
 .perceptron,
-.control,
-.information {
+.control {
     margin: calc(var(--element-size) * 1px);
     border: solid calc(var(--element-border) * 1px) black;
     border-radius: calc(var(--element-size) * 1px);
@@ -31,7 +32,8 @@ body {
     background-color: white;
 }
 
-.control, .information {
+.information,
+.control {
     border-color: gray;
     color: gray;
 }
@@ -46,8 +48,8 @@ body {
     cursor: help;
 }
 
-.control:hover,
 .information:hover,
+.control:hover,
 .input .perceptron:hover,
 .output .perceptron:hover {
     cursor: pointer;
